fixing layout issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -630,7 +630,7 @@ ul.topnav li.right {float: right;}
 
 .blog-title {
   font-family: .SFNSDisplay;
-  font-size: 32px;
+  font-size: 26px;
   color: #3A3B3B;
   letter-spacing: 0;
 }
